# python-package-tests

./: README.md
GDAL/: main.py  pyproject.toml
aiohttp/: main.py  pyproject.toml
all-packages/: main.py  pyproject.toml
argon2-cffi-bindings/: main.py  pyproject.toml
bcrypt/: main.py  pyproject.toml
bitarray/: main.py  pyproject.toml
blis/: main.py  pyproject.toml
brotli/: main.py  pyproject.toml
cffi/: main.py  pyproject.toml
contourpy/: main.py  pyproject.toml
cryptography/: pyproject.toml
cryptography-test/: main.py
fiona/: centroids.gpkg  example.gpkg  main.py  pyproject.toml
freetype/: main.py  pyproject.toml
geopandas/: main.py  pyproject.toml
google-crc32/: main.py  pyproject.toml
grpcio/: main.py  pyproject.toml
jq/: main.py  pyproject.toml
kiwisolver/: main.py  pyproject.toml
lru-dict/: main.py  pyproject.toml
lxml/: main.py  pyproject.toml  test.xml  test_xsl.xsl
markupsafe/: main.py  pyproject.toml
matplotlib/: main.py  pyproject.toml
msgpack/: main.py  pyproject.toml
msgspec/: main.py  pyproject.toml
no-packages/: pyproject.toml
numpy/: pyproject.toml
numpy 2.1.1/: pyproject.toml
numpy1/: pyproject.toml
numpy2/: main.py
opaque/: main.py  pyproject.toml
opencv-python/: main.py  pyproject.toml
pandas/: pyproject.toml
pendulum/: main.py  pyproject.toml
pillow/: main.py  pyproject.toml
pillow-test/: main.py
pycryptodome/: main.py  pyproject.toml
pycryptodomex/: main.py  pyproject.toml
pydantic-core-test/: main.py
pyobjus/: README.md  pyproject.toml
pyobjus/src/: main.py
yarl/: main.py  (+1 more)
(+19 files in other folders)
