[project]
name = "pyobjus_demo"
version = "0.3.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "flet==0.27.1"
]

[tool.flet.ios]
bundle_id = "com.mycompany.pyobjus-demo"
dependencies = [
  "pyobjus"
]

[tool.flet]
product = "Pyobjus Demo"
company = "Flet"
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.1",
]